# rent_ease_backend

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IT-402_.docx  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  run_seed.py
core/: admin.py  apps.py  models.py  seeds.py  serializer.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_property_image.py  0003_property_baths_property_beds_property_guests.py  0004_booking_guests_booking_status.py  0005_alter_profile_user.py  0006_booking_total_price.py  0007_alter_booking_property.py  0008_alter_booking_status.py  0009_propertymedia.py  0010_booking_payment_intent_id_booking_payment_link_and_more.py  0011_payout.py  0012_profile_picture_alter_property_location.py
emails/: lease-agreement-email.html  lease-agreement-renter.html  password-reset-email.html  payment-received-owner.html  payment-received-user.html  reservation-approved-user.html  reservation-denied-user.html  reservation-notification-owner.html
rentease_backend/: asgi.py  settings.py  urls.py  wsgi.py
