[project]
name = "rent-ease-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "markdown>=3.10",
    "modempay>=1.0.4",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.12",
]
